--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,17 +1,35 @@
-.title {
+body {
+  background-color: black;
   text-align: center;
-  background-color: Black; 
 }
+
 
 h1 {
   font-family: Verdana;
  font-weight: normal;
  font-size: 50px;
  color: white;
- text-align: center;
+
 }
 
 h2 {
-color: Aquamarine;
-font-size: 16px;
+font-family: Verdana;
+font-weight: 300;
+font-size: 42px;
+color: white
+}
+
+h3 {
+  font-family: Verdana
+  font-size: 21px;
+  color: gray;
+}
+
+h4 {
+  color: aquamarine;
+}
+
+h5 {
+  text-align: right;
+  color: gray;
 }
