--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,11 @@
 body {
   background-color: black;
   text-align: center;
+  font-family: Verdana
 }
 
 
 h1 {
-  font-family: Verdana;
  font-weight: normal;
  font-size: 50px;
  color: white;
@@ -13,20 +13,20 @@ h1 {
 }
 
 h2 {
-font-family: Verdana;
 font-weight: 300;
 font-size: 42px;
 color: white
 }
 
 h3 {
-  font-family: Verdana
   font-size: 21px;
   color: gray;
 }
 
-h4 {
+a {
   color: aquamarine;
+  font-size: 16px;
+  text-align: center;
 }
 
 h5 {
